test/tests/stages/18_structures/valid/no_structure_parameters/libraries/param_struct_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[199]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  struct
  identifier(inner)
  {
  double
  identifier(d)
  ;
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(outer)
  {
  char
  identifier(a)
  ;
  char
  identifier(b)
  ;
  struct
  identifier(inner)
  identifier(substruct)
  ;
  }
  ;
  int
  identifier(access_members_through_pointer)
  (
  struct
  identifier(outer)
  *
  identifier(ptr)
  ,
  int
  identifier(expected_a)
  ,
  int
  identifier(expected_b)
  ,
  double
  identifier(expected_d)
  ,
  int
  identifier(expected_i)
  )
  ;
  void
  identifier(update_members_through_pointer)
  (
  struct
  identifier(outer)
  *
  identifier(ptr)
  ,
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  struct
  identifier(inner)
  *
  identifier(inner_ptr)
  )
  ;
  int
  identifier(access_members_through_pointer)
  (
  struct
  identifier(outer)
  *
  identifier(ptr)
  ,
  int
  identifier(expected_a)
  ,
  int
  identifier(expected_b)
  ,
  double
  identifier(expected_d)
  ,
  int
  identifier(expected_i)
  )
  {
  if
  (
  identifier(ptr)
  ->
  identifier(a)
  !=
  identifier(expected_a)
  )
  {
  return
  const int(0)
  ;
  }
  if
  (
  identifier(ptr)
  ->
  identifier(b)
  !=
  identifier(expected_b)
  )
  {
  return
  const int(0)
  ;
  }
  if
  (
  identifier(ptr)
  ->
  identifier(substruct)
  .
  identifier(d)
  !=
  identifier(expected_d)
  )
  {
  return
  const int(0)
  ;
  }
  if
  (
  identifier(ptr)
  ->
  identifier(substruct)
  .
  identifier(i)
  !=
  identifier(expected_i)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  void
  identifier(update_members_through_pointer)
  (
  struct
  identifier(outer)
  *
  identifier(ptr)
  ,
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  struct
  identifier(inner)
  *
  identifier(inner_ptr)
  )
  {
  identifier(ptr)
  ->
  identifier(a)
  =
  identifier(a)
  ;
  identifier(ptr)
  ->
  identifier(b)
  =
  identifier(b)
  ;
  identifier(ptr)
  ->
  identifier(substruct)
  =
  *
  identifier(inner_ptr)
  ;
  return
  ;
  }
