test/tests/stages/18_structures/invalid_parse/struct_decl_double_semicolon.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  ;
  }
  ;
